--- a/papers/Introduction/Introduction.tex
+++ b/papers/Introduction/Introduction.tex
@@ -66,7 +66,7 @@ We also show that using multiple pulses empowers much greater phonon excitation 
 The very fast (essentially instantaneous) dynamics of the SDW and relatively strong coupling to the phonon mode with much slower dynamics, lies at the core of this behavior.
 While the technological relevance of this process is not immediately obvious, it does highlight the capabilities that a coupling between two orders with different dynamics can offer in terms of control, to the point where a pulse train can be designed using our model, such that the PLD oscillation follows a given envelope signal almost perfectly.
 \\\\
-We conclude this Thesis in Chapter~\ref{ch:Softening} by a systematic study of the implications that result from the interaction between strain and ferroelectric polarization at 180$^\circ$ ferroelectric domain walls in BaTiO$_3$.
+We conclude this Thesis in Chapter~\ref{ch:Softening} by a systematic study of the implications on the mechanical properties of 180$^\circ$ ferroelectric domain walls in BaTiO$_3$, due to the interaction between strain and polarization.
 Surprisingly, these walls appear mechanically softer to an applied tip, even though they are not ferroelastic and thus do not separate domains with different strain textures.
 Indeed, in ferroelastic domain walls one domain would be favored over the other by the force applied through the tip, meaning that when the tip is applied to the wall, it would excite a soft sliding domain wall mode.
 This mode is not present in either of the ferroelastic domains and thus the ferroelastic domain wall would appear softer.
