--- a/papers/Rashba/Rashba.tex
+++ b/papers/Rashba/Rashba.tex
@@ -530,7 +530,7 @@ The impetus of this research was the observation that the linear spin-splitting 
 Moreover, a closer inspection led to the conclusion that the splitting is heavily influenced by the character of the bands, resulting in a different orientation and size of the splitting in each band.
 To substantiate these claims, we investigated the original derivation that leads to the relativistic Rashba-effect, and discussed why it fails to explain these observations.
 \\\\
-We then continued with a study of the proposed alternative mechanism, based on the combination of Orbital Angular Momentum, electrostatics and atomic SOC.
+We then continued with a study of the proposed alternative mechanism, based on the combination of orbital angular momentum, electrostatics and atomic SOC.
 Through the use of a toy Tight-Binding model and $\bm k \cdot \bm p$ expansions, we identified two contributing factors to this mechanism, both originating from the unquenching of OAM.
 The first arose due to an electrostatically driven linear unquenching which in turn coupled to the spin through the atomic SOC.
 The second originated from a linear $\bm k$ variation of the dipoles of the Bloch functions with, at T-invariant points of the BZ, unquenched OAM as a result of the atomic SOC.
