--- a/papers/references.bib
+++ b/papers/references.bib
@@ -6816,3 +6816,19 @@ volume = {389},
 year = {1927}
 }
 
+@article{Hill2000,
+abstract = {Multiferroic magnetoelectrics are materials that are both ferromagnetic and ferroelectric in the same phase. As a result, they have a spontaneous magnetization that can be switched by an applied magnetic field, a spontaneous polarization that can be switched by an applied electric field, and often some coupling between the two. Very few exist in nature or have been synthesized in the laboratory. In this paper, we explore the fundamental physics behind the scarcity of ferromagnetic ferroelectric coexistence. In addition, we examine the properties of some known magnetically ordered ferroelectric materials. We find that, in general, the transition metal d electrons, which are essential for magnetism, reduce the tendency for off-center ferroelectric distortion. Consequently, an additional electronic or structural driving force must be present for ferromagnetism and ferroelectricity to occur simultaneously. {\textcopyright} 2000 American Chemical Society.},
+author = {Hill, Nicola A.},
+doi = {10.1021/jp000114x},
+file = {:home/ponet/Downloads/jp000114x.pdf:pdf},
+issn = {1520-6106},
+journal = {The Journal of Physical Chemistry B},
+month = {jul},
+number = {29},
+pages = {6694--6709},
+title = {{Why Are There so Few Magnetic Ferroelectrics?}},
+url = {https://pubs.acs.org/doi/10.1021/jp000114x},
+volume = {104},
+year = {2000}
+}
+
